out/old/manifests/artifactory/StatefulSet.jfrog-container-registry-artifactory.yaml
metadata:
  name: jfrog-container-registry-artifactory
  namespace: artifactory
  labels:
    app: artifactory
    chart: artifactory-107.41.4
    component: artifactory
    heritage: Helm
    release: jfrog-container-registry
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<CLEANUP_IP_10>"],"port":30807,"protocol":"TCP","serviceName":"artifactory:jfrog-container-registry-expose","allNodes":true},{"addresses":["<CLEANUP_IP_10>"],"port":31812,"protocol":"TCP","serviceName":"artifactory:jfrog-container-registry-expose","allNodes":true}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifactory
      release: jfrog-container-registry
      role: artifactory
  template:
    metadata:
      labels:
        app: artifactory
        chart: artifactory-107.41.4
        component: artifactory
        heritage: Helm
        release: jfrog-container-registry
        role: artifactory
      annotations:
        checksum/access-config: 60140105302e14d89d63e74e988eea5a0c9f0edc8c7bacd3e85cdaa19d4b96ba
        checksum/admin-creds: <REDACTED:env>
        checksum/binarystore: a4a1829bc30f51c7c2e34bdd29ff0daabf2fca5fb700c5622652d78cff46c7b5
        checksum/database-secrets: <REDACTED:env>
        checksum/systemyaml: e867b3e33f8b2ca7a499d25c6cdae07d14066a5bed5ca17a5bd0e29f67201ad3
    spec:
      volumes:
      - name: migration-scripts
        configMap:
          name: jfrog-container-registry-artifactory-migration-scripts
          defaultMode: 420
      - name: installer-info
        configMap:
          name: jfrog-container-registry-artifactory-installer-info
          defaultMode: 420
      - name: systemyaml
        secret:
          secretName: <REDACTED:env>
          defaultMode: 420
      - name: access-config
        secret:
          secretName: <REDACTED:env>
          defaultMode: 420
      - name: binarystore-xml
        secret:
          secretName: <REDACTED:env>
          defaultMode: 420
      containers:
      - name: artifactory
        image: <COMPANY>-<DOMAIN_607>/jfrog/artifactory-jcr:7.41.4
        command:
        - /bin/bash
        - -c
        - "set -e; if [ -d /artifactory_extra_conf ] && [ -d /artifactory_bootstrap\
          \ ]; then\n  echo \"Copying bootstrap config from /artifactory_extra_conf\
          \ to /artifactory_bootstrap\";\n  cp -Lrfv /artifactory_extra_conf/ /artifactory_bootstrap/;\n\
          fi; exec /<DOMAIN_135>\n"
        ports:
        - name: http
          containerPort: 8082
          protocol: TCP
        - name: http-internal
          containerPort: 8081
          protocol: TCP
        resources:
          limits:
            cpu: '2'
            memory: 8Gi
          requests:
            cpu: 500m
            memory: 8Gi
        volumeMounts:
        - name: artifactory-volume
          mountPath: /var/opt/jfrog/artifactory
        - name: binarystore-xml
          mountPath: /artifactory_bootstrap/<DOMAIN_718>
          subPath: <DOMAIN_718>
        - name: installer-info
          mountPath: /artifactory_bootstrap/info/<DOMAIN_719>
          subPath: <DOMAIN_719>
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - curl -s -k --fail --max-time 5 http://localhost:8091/artifactory/api/v1/system/liveness
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5
        startupProbe:
          exec:
            command:
            - sh
            - -c
            - curl -s -k --fail --max-time 5 http://localhost:8091/artifactory/api/v1/system/readiness
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 90
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            drop:
            - NET_RAW
          runAsNonRoot: true
          allowPrivilegeEscalation: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: default
      serviceAccount: default
      securityContext:
        runAsUser: 1030
        fsGroup: 1030
      imagePullSecrets:
      - name: registrypullsecret
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: artifactory
                  release: jfrog-container-registry
              topologyKey: <DOMAIN_138>/hostname
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: artifactory-volume
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Ti
      storageClassName: ceph-block-replica-2
      volumeMode: Filesystem
  serviceName: artifactory
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
