out/old/manifests/artifactory/StatefulSet.jfrog-container-registry-postgresql.yaml
metadata:
  name: jfrog-container-registry-postgresql
  namespace: artifactory
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: jfrog-container-registry
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.3.18
  annotations: {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: jfrog-container-registry
      app.kubernetes.io/name: postgresql
      role: primary
  template:
    metadata:
      name: jfrog-container-registry-postgresql
      labels:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: jfrog-container-registry
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        helm.sh/chart: postgresql-10.3.18
        role: primary
    spec:
      volumes:
      - name: postgresql-extended-config
        configMap:
          name: jfrog-container-registry-postgresql-extended-configuration
          defaultMode: 420
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 1Gi
      containers:
      - name: jfrog-container-registry-postgresql
        image: <COMPANY>-<DOMAIN_607>/jfrog/postgresql:13.4.0-debian-10-r39
        ports:
        - name: tcp-postgresql
          containerPort: 5432
          protocol: TCP
        resources:
          limits:
            cpu: '1'
            memory: 5Gi
          requests:
            cpu: 200m
            memory: 1Gi
        volumeMounts:
        - name: postgresql-extended-config
          mountPath: /bitnami/postgresql/conf/conf.d/
        - name: dshm
          mountPath: /dev/shm
        - name: data
          mountPath: /bitnami/postgresql
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec pg_isready -U "artifactory" -d "dbname=artifactory" -h 127.0.0.1
              -p 5432
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - -e
            - 'exec pg_isready -U "artifactory" -d "dbname=artifactory" -h 127.0.0.1
              -p 5432

              '
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 6
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 1001
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroup: 1001
      imagePullSecrets:
      - name: registrypullsecret
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: primary
                  app.kubernetes.io/instance: jfrog-container-registry
                  app.kubernetes.io/name: postgresql
              namespaces:
              - artifactory-jcr
              topologyKey: <DOMAIN_138>/hostname
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 500Gi
      storageClassName: ceph-block-replica-2
      volumeMode: Filesystem
  serviceName: jfrog-container-registry-postgresql-headless
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
