out/old/manifests/artifactory/Service.jfrog-container-registry-artifactory.yaml
metadata:
  name: jfrog-container-registry-artifactory
  namespace: artifactory
  labels:
    app: artifactory
    chart: artifactory-107.41.4
    component: artifactory
    heritage: Helm
    release: jfrog-container-registry
  annotations: {}
spec:
  ports:
  - name: http-router
    protocol: TCP
    port: 8082
    targetPort: 8082
  - name: http-artifactory
    protocol: TCP
    port: 8081
    targetPort: 8081
  selector:
    app: artifactory
    component: artifactory
    release: jfrog-container-registry
  clusterIP: <IP_45>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
