out/old/manifests/artifactory/Service.jfrog-container-registry-expose.yaml
metadata:
  name: jfrog-container-registry-expose
  namespace: artifactory
  labels:
    app: artifactory
    chart: artifactory-107.41.4
    component: artifactory
    heritage: Helm
    release: jfrog-container-registry
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<CLEANUP_IP_10>"],"port":30807,"protocol":"TCP","serviceName":"artifactory:jfrog-container-registry-expose","allNodes":true},{"addresses":["<CLEANUP_IP_10>"],"port":31812,"protocol":"TCP","serviceName":"artifactory:jfrog-container-registry-expose","allNodes":true}]'
spec:
  ports:
  - name: http-router
    protocol: TCP
    port: 8082
    targetPort: 8082
    nodePort: 30807
  - name: http-artifactory
    protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 31812
  selector:
    app: artifactory
  clusterIP: <IP_46>
  type: NodePort
  sessionAffinity: <REDACTED:env>
  externalTrafficPolicy: Cluster
apiVersion: v1
kind: Service
