out/old/manifests/artifactory/Service.jfrog-container-registry-postgresql.yaml
metadata:
  name: jfrog-container-registry-postgresql
  namespace: artifactory
  labels:
    app.kubernetes.io/instance: jfrog-container-registry
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.3.18
  annotations: {}
spec:
  ports:
  - name: tcp-postgresql
    protocol: TCP
    port: 5432
    targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: jfrog-container-registry
    app.kubernetes.io/name: postgresql
    role: primary
  clusterIP: <IP_47>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
